# cstring

./: .gitignore  CMakeLists.txt  README.md  shell.nix
libsrc/: CMakeLists.txt  str.c  str.h  stringbuilder.c  stringbuilder.h
libsrc/_cstring_private_/: _private.h
libsrc/include/: str.h  stringbuilder.h  stringview.h  types.h
libsrc/private/: str.c  stringbuilder.c  stringview.c
src/: common.h  main.c
src/string/: CMakeLists.txt  str.c  str.h  stringbuilder.c  stringbuilder.h  stringview.c  stringview.h
src/vector/: CMakeLists.txt  vector.c  vector.h
